--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Donation party
 
-heroku setup instructions: https://devcenter.heroku.com/articles/django
+heroku setup instructions: https://devcenter.heroku.com/articles/rails3
