--- a/TODO
+++ b/TODO
@@ -1,7 +1,14 @@
+Splash page:
+* A simple cover page with a quick description of donation party
+* email signup link
+
 Core functionality
-* store address for shipping
 * send order to zinc
 * send charity order to firstgivig
+
+emails:
+* confirmation email on order placed
+* email on round closed?
 
 UI Features
 * Clearly inform how many donations are required before the round can finish on the rounds page
@@ -11,6 +18,7 @@ UI Features
 
 Refactoring
 * HAML/SLIM everything
+* Switch from seconds left
 
 Minor/cleanup
 * Ensure CC expiration date default is in the future
